--- a/src/main/resources/Messages_fi.properties
+++ b/src/main/resources/Messages_fi.properties
@@ -1,1 +1,9 @@
 javax.faces.component.UIInput.REQUIRED=Arvo on pakollinen
+javax.faces.converter.DoubleConverter.DOUBLE=oltava järkevä numero
+javax.faces.converter.DoubleConverter.DOUBLE_detail=oltava järkevä numero
+javax.faces.converter.FloatConverter.FLOAT=oltava järkevä numero
+javax.faces.converter.FloatConverter.FLOAT_detail=oltava järkevä numero
+javax.faces.converter.IntegerConverter.INTEGER=oltava järkevä numero
+javax.faces.converter.IntegerConverter.INTEGER_detail=oltava järkevä numero
+javax.faces.converter.LongConverter.LONG=oltava järkevä numero
+javax.faces.converter.LongConverter.LONG_detail=oltava järkevä numero
