--- a/src/main/resources/ValidationMessages_fi.properties
+++ b/src/main/resources/ValidationMessages_fi.properties
@@ -1,2 +1,4 @@
 javax.validation.constraints.NotNull.message=arvo on pakollinen
 javax.validation.constraints.Size.message=pituuden oltava {min} ja {max} väliltä
+javax.validation.constraints.Max.message=oltava <= {value}
+javax.validation.constraints.Min.message=oltava >= {value}
